--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<head>
-  <title>The HTML5 Herald</title>
-</head>
-<body>
-  <p> Hello Rsschool </p>
-</body>
+<html>
+ <head>
+  <meta charset="utf-8" />
+  <title>HTML5</title>
+  <!--[if IE]>
+   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+ </head>
+ <body>
+  <p>Hello, RSSchool</p>
+ </body>
 </html>
