--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<html>
+ <html lang="en">
  <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <title>HTML5</title>
-  <!--[if IE]>
-   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
  </head>
  <body>
   <p>Hello, RSSchool</p>
