feat: add photo and add code index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,76 @@
 <!DOCTYPE html>
- <html lang="en">
- <head>
-  <meta charset="utf-8">
-  <title>HTML5</title>
- </head>
- <body>
-  <p>Hello, RSSchool</p>
- </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#contacts">Contacts</a></li>
+                <li><a href="#aboutme">About me</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#courses">Courses</a></li>
+                <li><a href="#code">Code</a></li>
+                <li><a href="#languages">Languages</a></li>
+                <li><a href="#experience">Experience</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="profile">
+            <h1>Mikalai Aliakhnovich</h1>
+            <div>
+                <img src="assets/img/photo.jpg" alt="My photo">
+            </div>
+        </section>
+        <section id="contacts">
+            <h2>Contacts</h2>
+            <ul>
+                <li>Location: Belarus</li>
+                <li>Phone: +375 (29) 313-68-20</li>
+                <li>E-mail: <a href="mailto:v3136820@gmail.com">v3136820@gmail.com</a></li>
+                <li>GitHub: <a href="https://github.com/nickoff">Nickoff</a></li>
+            </ul>
+        </section>
+        <section id="aboutme">
+            <h2>Aboute me</h2>
+            <p>
+                Hello. I am 38 years old. I work in developer company. Programming is my hobby.
+            </p>
+        </section>
+        <section id="education">
+            <h2>Education</h2>
+        </section>
+        <section id="skills">
+            <h2>Skills</h2>
+        </section>
+        <section id="courses">
+            <h2>Courses</h2>
+        </section>
+        <section id="code">
+            <h2>Code</h2>
+        </section>
+        <section id="languages">
+            <h2>Languages</h2>
+            <ul>
+                <li>Belarusian - native</li>
+                <li>Russian - native</li>
+                <li>English - A1</li>
+            </ul>
+        </section>
+        <section id="experience">
+            <h2>Experience</h2>
+            <ul>
+                <li>HTML&CSS: <a href="https://nickoff.github.io/rsschool-cv/">CV#3. CV. Cross-Check</a></li>
+            </ul>
+        </section>
+    </main>>
+    <footer></footer>
+</body>
 </html>
