feat: add footer in index.html

--- a/index.html
+++ b/index.html
@@ -46,15 +46,31 @@
         </section>
         <section id="education">
             <h2>Education</h2>
+            <p>Major - Architecture<br>
+                Belarusian National Technical University<br>
+                2001-2007
+            </p>
         </section>
         <section id="skills">
             <h2>Skills</h2>
+            <ul>
+                <li>HTML (in the process)</li>
+                <li>CSS (in the process)</li>
+                <li>Python (basic)</li>
+            </ul>
         </section>
         <section id="courses">
             <h2>Courses</h2>
+            <ul>
+                <li>JS/FE Pre-School 2022Q4</li>
+                <li>Python (basic) <a href="https://stepik.org/cert/986358">Stepik</a></li>
+            </ul>
         </section>
         <section id="code">
             <h2>Code</h2>
+            <code>
+                print("Hello World!")
+            </code>
         </section>
         <section id="languages">
             <h2>Languages</h2>
@@ -71,6 +87,20 @@
             </ul>
         </section>
     </main>>
-    <footer></footer>
+    <footer>
+        <div>
+            <div>
+                <a href="https://rs.school/js/">
+                    <img src="https://rs.school/images/rs_school_js.svg" alt="RS School logo">
+                </a>
+            </div>
+            <div>
+                <a href="https://github.com/nickoff">Nickoff</a>
+            </div>
+            <div>
+                <p>2022</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
