--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <ul>
                 <li><a href="#contacts">Contacts</a></li>
@@ -39,7 +39,7 @@
             </ul>
         </section>
         <section id="aboutme">
-            <h2>Aboute me</h2>
+            <h2>About me</h2>
             <p>
                 Hello. I am 38 years old. I work in developer company. Programming is my hobby.
             </p>
@@ -87,7 +87,7 @@
             </ul>
         </section>
     </main>>
-    <footer>
+    <footer class="footer">
         <div>
             <div>
                 <a href="https://rs.school/js/">
