feat: add: font and code in style.css

--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
 </head>
 <body>
     <header class="header">
+        <div class="container">
         <nav>
-            <ul>
-                <li><a href="#contacts">Contacts</a></li>
-                <li><a href="#aboutme">About me</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#courses">Courses</a></li>
-                <li><a href="#code">Code</a></li>
-                <li><a href="#languages">Languages</a></li>
-                <li><a href="#experience">Experience</a></li>
+            <ul class="nav-list">
+                <li><a href="#contacts" class="nav-link">Contacts</a></li>
+                <li><a href="#aboutme" class="nav-link">About me</a></li>
+                <li><a href="#education" class="nav-link">Education</a></li>
+                <li><a href="#skills" class="nav-link">Skills</a></li>
+                <li><a href="#courses" class="nav-link">Courses</a></liclass=>
+                <li><a href="#code" class="nav-link">Code</a></lilass=>
+                <li><a href="#languages" class="nav-link">Languages</a></li>
+                <li><a href="#experience" class="nav-link">Experience</a></li>
             </ul>
         </nav>
+    </div>
     </header>
     <main>
+        <div class="container">
         <section id="profile">
             <h1>Mikalai Aliakhnovich</h1>
             <div>
@@ -34,8 +37,8 @@
             <ul>
                 <li>Location: Belarus</li>
                 <li>Phone: +375 (29) 313-68-20</li>
-                <li>E-mail: <a href="mailto:v3136820@gmail.com">v3136820@gmail.com</a></li>
-                <li>GitHub: <a href="https://github.com/nickoff">Nickoff</a></li>
+                <li>E-mail: <a href="mailto:v3136820@gmail.com" class="link">v3136820@gmail.com</a></li>
+                <li>GitHub: <a href="https://github.com/nickoff" class="link">Nickoff</a></li>
             </ul>
         </section>
         <section id="aboutme">
@@ -86,20 +89,15 @@
                 <li>HTML&CSS: <a href="https://nickoff.github.io/rsschool-cv/">CV#3. CV. Cross-Check</a></li>
             </ul>
         </section>
-    </main>>
+    </div>
+    </main>
     <footer class="footer">
-        <div>
-            <div>
+        <div class="container">
                 <a href="https://rs.school/js/">
-                    <img src="https://rs.school/images/rs_school_js.svg" alt="RS School logo">
+                    <img class="logoRsschool" src="https://rs.school/images/rs_school_js.svg" alt="RS School logo">
                 </a>
-            </div>
-            <div>
-                <a href="https://github.com/nickoff">Nickoff</a>
-            </div>
-            <div>
-                <p>2022</p>
-            </div>
+            2022
+                <a href="https://github.com/nickoff" class="footer-link">Me on GitHub</a>
         </div>
     </footer>
 </body>
