--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <li><a href="#aboutme" class="nav-link">About me</a></li>
                 <li><a href="#education" class="nav-link">Education</a></li>
                 <li><a href="#skills" class="nav-link">Skills</a></li>
-                <li><a href="#courses" class="nav-link">Courses</a></liclass=>
-                <li><a href="#code" class="nav-link">Code</a></lilass=>
+                <li><a href="#courses" class="nav-link">Courses</a></li>
+                <li><a href="#code" class="nav-link">Code</a></li>
                 <li><a href="#languages" class="nav-link">Languages</a></li>
                 <li><a href="#experience" class="nav-link">Experience</a></li>
             </ul>
