feat: update footer

--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
     </div>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
                 <a href="https://rs.school/js/">
                     <img class="logoRsschool" src="https://rs.school/images/rs_school_js.svg" alt="RS School logo">
                 </a>
-            2022
+                &#169 2022                
                 <a href="https://github.com/nickoff" class="footer-link">Me on GitHub</a>
         </div>
     </footer>
