fix: fix err &amp;

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <section id="experience">
             <h2>Experience</h2>
             <ul>
-                <li>HTML&CSS: <a href="https://nickoff.github.io/rsschool-cv/">CV#3. CV. Cross-Check</a></li>
+                <li>HTML&amp;CSS: <a href="https://nickoff.github.io/rsschool-cv/">CV#3. CV. Cross-Check</a></li>
             </ul>
         </section>
     </div>
