--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
         </section>
         <section id="aboutme">
             <h2>About me</h2>
-            <p>
-                Hello. I am 38 years old. I work in developer company. Programming is my hobby.
-            </p>
+            <p>Hello. I am 38 years old. I work in developer company. Programming is my hobby.</p>
         </section>
         <section id="education">
             <h2>Education</h2>
